to be continued

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "algolia-places-react": "^1.6.1",
     "aos": "^2.3.4",
     "daisyui": "^2.42.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
+    "framer-motion": "^8.1.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-day-picker": "^8.4.1",
